<resources>
    <string name="app_name">NoFatties</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Email</string>
    <string name="registrarse">CREAR CUENTA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lastname">Apellido</string>
    <string name="name">Nombre</string>
    <string name="este_mes">Este Mes</string>
    <string name="esta_semana">Esta Semana</string>
    <string name="btn_date_picker">Fecha</string>
    <string name="btn_save">Guardar</string>
    <string name="txt_fecha">__-__-____</string>
</resources>